--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -1,9 +1,47 @@
 @charset "UTF-8";
+
+/* 추가 페이지. 토글 아코디언? */
+.submenus{
+	position: absolute;
+	z-index: 5;
+	top: 430px;
+	display: flex;
+	justify-content: space-evenly;
+	width: 960px;
+	
+	border: 2px solid gray;
+	background: lemonchiffon;
+}
+.submenus ul{
+	padding: 0px;
+}
+.submenus ul li{
+	line-height: 2em;
+	font-weight: bold;
+	cursor: pointer;
+	list-style-type: none;
+}
+.submenus:hover li{
+	text-decoration: underline;
+	color: red;
+}
+.starSublist>ul>li{
+	margin: 0 30px 0 30px;
+	display: inline-block;
+}
+.hide{
+	opacity: 0;
+}
+
+
+
+
+
+/* 컨테이너 */
 .outContainer {
 	flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
     display: flex;
     
     margin: 100px 0 100px 0;
@@ -78,7 +116,6 @@
 .customSearchBtn img {
 	position: relative;
 	top: 3px;
-	left: -2px;
 	width: 40px;
 	height: 40px;
 }
@@ -101,13 +138,14 @@
     justify-content: space-around; 
     padding: 10px 0 10px 0;
 	margin: 0 0 10px 0;
+	width: 100%;
     
 	background: salmon;
     /* border: 1px solid brown; */
 }
 .category li {
 	width: 200px;
-    padding: 10px; 
+/*     padding: 10px;  */
 	font: normal bold 15pt 'sans-serif';
 	border-radius: 50px;
 	cursor: pointer;
