--- a/green-yummy/src/main/resources/static/index/css/indexRecommand.css
+++ b/green-yummy/src/main/resources/static/index/css/indexRecommand.css
@@ -15,6 +15,7 @@
 
 .recommandList{
 	position: relative;
+	left: -2520px;
 	display: flex;
     list-style: none;
     padding: 0px; 
@@ -23,14 +24,16 @@
     border: 1px solid skyblue;
 }
 
+/* 이 부분이 가게 사진. 슬라이드 구성 요소 */
 .recommandList > li{
 	position: relative;
     display: flex; 
     flex-direction: column; 
     width: 380px; 
     height: 400px; 
-    border: 1px solid gray; 
+/*     border: 1px solid gray;  */
     margin: 0 20px 0 20px;
+    box-shadow: 0 5px 10px 1px gray;
 }
 
 .recommandImg{
