마이페이지 북마크

--- a/green-yummy/src/main/resources/static/user/css/storeCollection.css
+++ b/green-yummy/src/main/resources/static/user/css/storeCollection.css
@@ -73,11 +73,11 @@ select{
 	
 	border: 2px solid gray;
 }
-.storeAlbum > img{
+.storeAlbum > a > img{
 	width: 320px;
 	height: 250px;
 }
-.storeAlbum > span{
+.storeAlbum > a > span{
 	font: normal bold 13pt 'sans-serif';
 }
 
