--- a/green-yummy/src/main/resources/static/public/css/findIdPassword.css
+++ b/green-yummy/src/main/resources/static/public/css/findIdPassword.css
@@ -86,7 +86,7 @@ input[type="text"]{
 	font-size: 10pt;
 	color: gray;
 }
-input[type="submit"]{
+#myId, #newPswd{
 	width: 100px;
 	height: 50px;
 	margin: 20px 20px 0 20px;
