--- a/green-yummy/src/main/resources/static/user/css/createReview.css
+++ b/green-yummy/src/main/resources/static/user/css/createReview.css
@@ -29,6 +29,8 @@ form > p{
     
 }
 .rateSelect {
+	display: flex;
+	justify-content: center;
 	border: 2px solid #ccc;
     border-radius: 8px;
     padding: 10px;
@@ -41,7 +43,7 @@ legend{
 }
 .rateSelect img{
 	width: 190px;
-	height: 35px;
+	height: 35px;	
 }
 .rateSelect img:not(:nth-of-type(3)){
 	display: none;
