--- a/green-yummy/src/main/resources/static/user/css/createReview.css
+++ b/green-yummy/src/main/resources/static/user/css/createReview.css
@@ -28,9 +28,11 @@ form > p{
     height: 1000px;
     
 }
-.rateSelect {
+.rateSelect {/*별 사진*/
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	border: 2px solid #ccc;
     border-radius: 8px;
     padding: 10px;
