--- a/green-yummy/src/main/resources/static/public/css/dataSearch.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearch.css
@@ -97,6 +97,62 @@
 	background: salmon;
 }
 
+/* 카테고리 부분 */
+.category {
+    list-style: none;
+    display: flex; 
+    justify-content: space-around; 
+    padding: 10px 0 10px 0;
+	margin: 0 0 10px 0;
+	width: 100%;
+    
+	background: salmon;
+    /* border: 1px solid brown; */
+}
+.category li {
+	width: 200px;
+/*     padding: 10px;  */
+	font: normal bold 15pt 'sans-serif';
+	border-radius: 50px;
+	cursor: pointer;
+	color: white;
+}
+.category li:hover{
+	color: black;
+	background: lemonchiffon;
+	transition: "all 300ms ease-in-out";
+}
+/* 추가 페이지. 토글 아코디언? */
+.submenus{
+	position: absolute;
+	z-index: 5;
+	top: 330px;
+	left: 200px;
+	display: flex;
+	justify-content: space-evenly;
+	width: 960px;
+	
+	border: 2px solid gray;
+	background: lemonchiffon;
+}
+.submenus ul{
+	padding: 0px;
+}
+.submenus ul li{
+	line-height: 2em;
+	font-weight: bold;
+	cursor: pointer;
+	list-style-type: none;
+}
+.starSublist>ul>li,
+.areaSublist>ul>li{
+	margin: 0 30px 0 30px;
+	display: inline-block;
+}
+.hide{
+	opacity: 0;
+}
+
 /* 지도 */
 .map {
     width: 60%;
