--- a/green-yummy/src/main/resources/static/public/css/pictureOCR.css
+++ b/green-yummy/src/main/resources/static/public/css/pictureOCR.css
@@ -11,7 +11,8 @@ main{
     align-items: center;
     width: 1280px;
     
-    border: 2px solid turquoise;
+    border: 2px solid gray;
+    border-radius: 8px;
 }
 
 /* 도움말 부분 */
@@ -22,7 +23,7 @@ main{
 }
 .OCRhelp span{
 	font-size: 10pt;
-	color: blue;
+	color: #4169e1;
 }
 .OCRhelp img{
 	position: relative;
@@ -33,21 +34,21 @@ main{
 }
 /*OCR 설명란*/
 .OCRexplain{
-/* 	position: absolute; */
-	position: relative;
-/* 	top: 150px; */
-/* 	left: 540px; */
-	top: -250px;
-	left: 20px;
+	position: absolute;
+/* 	position: relative; */
+	top: 150px;
+	left: 540px;
+/* 	top: -250px; */
+/* 	left: 20px; */
     padding: 10px;
 	background: #f2f2f2;
 	opacity: 0.8;
 	
-    border: 1px solid orange;
+    border: 1px solid #f2f2f2;
 }
-/* .invisible{ */
-/* 	opacity: 0; */
-/* } */
+.invisible{
+	opacity: 0;
+}
 h4{
     padding-left: 10px;
 }
@@ -71,7 +72,7 @@ h4{
 }
 .searchContainer::before{
 	content:"";
-	background: #f2f2f2;
+/* 	background: #f2f2f2; */
 	position: absolute;
 	z-index: -5;
 	top: 0;
@@ -125,8 +126,7 @@ input[type="file"]{
 	position: absolute;
     z-index: 50;
     background: salmon;
-    opacity: 0.5;
-    display: hidden;
+    opacity: 0;
     cursor: pointer;
 }
 .OCRsearch{
@@ -134,6 +134,8 @@ input[type="file"]{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+    border-radius: 8px;
     
 }
 .OCRsearch > img{
