회원 탈퇴 기능 구현

--- a/green-yummy/src/main/resources/static/user/css/userPage.css
+++ b/green-yummy/src/main/resources/static/user/css/userPage.css
@@ -130,7 +130,8 @@ main{
 }
 .logoutBtns>form>input[type="button"],
 .logoutBtns>form>input[type="submit"],
-.userOutBtns>input[type="button"]{
+.userOutBtns>form>input[type="button"], 
+.userOutBtns>form>input[type="submit"]{
 	box-sizing: border-box;
     width: 80px;
     height: 30px;
