자잘하게 수정들

--- a/green-yummy/src/main/resources/static/public/css/notification.css
+++ b/green-yummy/src/main/resources/static/public/css/notification.css
@@ -6,7 +6,8 @@ main{
 }
 .notifyTitle{
     width: 1280px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom : 10px;
     text-align: center;
     font-weight: bold;
     background: salmon;
@@ -38,15 +39,89 @@ tr:not(first-child){
 td{
     padding: 10px;
 }
-td:nth-child(1), td:nth-child(2),
-td:nth-child(5){
+td:nth-child(1), td:nth-child(5){
     width: 50px;
 }
 
-td:not(:nth-child(3)),
-tr:nth-child(2){
+td:not(:nth-child(3)){
     text-align: center;
 }
-td:nth-child(4){
-    width: 150px;
+td:nth-child(2), td:nth-child(4){
+    width: 100px;
 }
+tr:not(:first-child) td:nth-child(3){
+	text-align:center;
+}
+
+
+
+
+.pagination{
+	margin-top: 10px;
+	margin-bottom: 30px;	
+}
+
+.pagination > input[type = "button"]{
+    width: 30px;
+    height: 30px;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    background: salmon;
+}
+
+.pagination > .disButt{
+	width: 30px;
+    height: 30px;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    background: pink !important;
+}
+
+.SearchBar{
+	width: 1280px;
+    padding-top: 10px;
+    padding-bottom : 10px;
+    text-align: center;
+    font-weight: bold;    
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;               
+}
+
+.SearchTab{
+	width:1200px;
+}
+.SearchTot{
+	border-top: 1px solid white;
+    border-bottom: 1px solid white;
+	background: white;
+	width:300px;
+	text-align: left;
+	height: 30px;
+}
+.SearchTyp{
+	border-top: 1px solid white;
+    border-bottom: 1px solid white;
+	background: white;
+	width:800px;
+	text-align: right;
+	height: 30px;
+}
+.SearchTyp select{
+	margin: 0;
+	padding: 0;
+	height: 30px;
+}
+.SearchTyp input[type="text"]{
+	margin: 0;
+	height: 24px;
+}
+.SearchTyp input[type="submit"]{
+	margin: 0;
+	height: 28px;
+}
+
