--- a/green-yummy/src/main/resources/static/public/css/userLogin.css
+++ b/green-yummy/src/main/resources/static/public/css/userLogin.css
@@ -51,7 +51,7 @@ input[type="submit"]{
 }
 .findNjoin > p{
 	position: relatvie;
-	margin: 0;
+	margin: 10px;
 	left: 100px;
 	font-size: 11pt;
 	cursor: pointer;
