--- a/green-yummy/src/main/resources/static/public/css/dataSearch.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearch.css
@@ -1,28 +1,30 @@
 @charset "UTF-8";
 
-/* 라디오 버튼 조정 */
-.sortOptions { /*밑에 있다. 마진 20. 나중에 합칠 것*/
-	width: 1280px;
-	border-radius: 8px;
-	border: 2px solid pink;
-}
 
+
+/* 컨테이너 */
 .outContainer {
-	justify-content: center;
-	text-align: center;
-	display: flex;
-}
-
-.innerContainer {
-	width: 1280px;
-	justify-content: center;
-	text-align: center;
-	display: flex;
 	flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
+    margin: 100px 0 100px 0;
 }
-
+.innerContainer{
+	display: flex;
+    flex-direction: column;
+	width: 1280px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    
+	/* border: 1px solid salmon; */
+}
 /* 검색 부분 */
-.searchContainer {
+
+.searchContainer{
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -30,9 +32,8 @@
 	height: 50px;
 	padding: 10px;
 }
-
-.searchContainer::before {
-	content: "";
+.searchContainer::before{
+	content:"";
 	background: #f2f2f2;
 	position: absolute;
 	z-index: -5;
@@ -41,8 +42,7 @@
 	left: 0;
 	right: 0;
 }
-
-.ocricon {
+.ocricon{
 	position: relative;
 	top: -3px;
 	width: 50px;
@@ -51,113 +51,162 @@
 	border-radius: 5px;
 	background: white;
 }
-
-.ocricon img {
+.ocricon img{
 	width: 50px;
 	height: 50px;
 	cursor: pointer;
 }
-
 .searchBar {
 	box-sizing: border-box;
-	width: 800px;
-	height: 50px;
-	display: inline-block;
-	outline: none;
-	border-radius: 50px;
-	border: 2px solid salmon;
-	padding: 10px 10px 10px 20px;
-	background: white;
-
-	/* border: 1px solid brown; */
+    width: 800px;
+    height: 50px;
+    display: inline-block; 
+    outline: none;
+    border-radius: 50px;
+    border: 2px solid salmon;
+    padding: 10px 10px 10px 20px;
+    background: white;
+    
+    /* border: 1px solid brown; */
 }
-
-.customSearchBtn, .OCRBtn {
-	width: 50px;
-	height: 50px;
-	display: inline-block;
-	cursor: pointer;
+.customSearchBtn, .OCRBtn{
+    width: 50px;
+    height: 50px;
+    display: inline-block; 
+    cursor: pointer; 
 }
-
 .customSearchBtn img {
 	position: relative;
 	top: 3px;
-	left: -2px;
 	width: 40px;
 	height: 40px;
 }
-
-.customSearchBtn {
+.customSearchBtn{
 	position: relative;
 	left: -50px;
 	border-radius: 0 50px 50px 0;
 }
-
-.OCRBtn {
+.OCRBtn{
 	margin-left: 20px;
 }
-
-.customSearchBtn {
+.customSearchBtn{
 	background: salmon;
 }
 
-/* 카테고리 부분 */
-.category {
-	list-style: none;
+/* 검색 부분 */
+
+.searchContainer{
+	position: relative;
 	display: flex;
-	justify-content: space-around;
-	padding: 10px 0 10px 0;
-	margin: 0 0 10px 0;
+	justify-content: center;
 	width: 100%;
-	background: salmon;
-	/* border: 1px solid brown; */
+	height: 50px;
+	padding: 10px;
 }
-
-.category li {
-	width: 200px;
-	/*     padding: 10px;  */
-	font: normal bold 15pt 'sans-serif';
-	border-radius: 50px;
-	cursor: pointer;
-	color: white;
-}
-
-.category li:hover {
-	color: black;
-	background: lemonchiffon;
-	transition: "all 300ms ease-in-out";
-}
-/* 추가 페이지. 토글 아코디언? */
-.submenus {
+.searchContainer::before{
+	content:"";
+	background: #f2f2f2;
 	position: absolute;
-	z-index: 5;
-	top: 330px;
-	left: 200px;
-	display: flex;
-	justify-content: space-evenly;
-	width: 960px;
-	border: 2px solid gray;
-	background: lemonchiffon;
+	z-index: -5;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
-
-.submenus ul {
-	padding: 0px;
+.ocricon{
+	position: relative;
+	top: -3px;
+	width: 50px;
+	height: 50px;
+	border: 4px solid gray;
+	border-radius: 5px;
+	background: white;
 }
-
-.submenus ul li {
-	line-height: 2em;
-	font-weight: bold;
+.ocricon img{
+	width: 50px;
+	height: 50px;
 	cursor: pointer;
-	list-style-type: none;
+}
+.searchBar {
+	box-sizing: border-box;
+    width: 800px;
+    height: 50px;
+    display: inline-block; 
+    outline: none;
+    border-radius: 50px;
+    border: 2px solid salmon;
+    padding: 10px 10px 10px 20px;
+    background: white;
+    
+    /* border: 1px solid brown; */
+}
+.customSearchBtn, .OCRBtn{
+    width: 50px;
+    height: 50px;
+    display: inline-block; 
+    cursor: pointer; 
+}
+.customSearchBtn img {
+	position: relative;
+	top: 3px;
+	width: 40px;
+	height: 40px;
+}
+.customSearchBtn{
+	position: relative;
+	left: -50px;
+	border-radius: 0 50px 50px 0;
+}
+.OCRBtn{
+	margin-left: 20px;
+}
+.customSearchBtn{
+	background: salmon;
 }
 
-.starSublist>ul>li, .areaSublist>ul>li {
-	margin: 0 30px 0 30px;
-	display: inline-block;
+/*카페고리 부분*/
+
+
+.search-list{
+    display: flex;       
+    justify-content: center;
+    list-style-type: none; 
+    padding: 0;          
+    margin: 0;  
+    background: salmon;
+    width:1280px;
 }
 
-.hide {
-	opacity: 0;
+.search-list li {
+    cursor: pointer;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.search-list li:hover {
+    background-color: #f0f0f0;
+}
+
+.list-show {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
+}
+
+.list-show ul {
+    display: none; 
+    flex-direction: row; 
+    list-style-type: none; 
+    padding: 0;    
+    margin: 0;
+    text-align:center; 
+}
+
+/* 라디오 버튼 조정 */
+.sortOptions { /*밑에 있다. 마진 20. 나중에 합칠 것*/
+	width: 1280px;
+	border-radius: 8px;
+	border: 2px solid pink;
 }
 
 /* 지도 */
@@ -181,25 +230,25 @@
 
 /*가게 리스트*/
 #shop-list {
-   display: flex;
-   flex-wrap: wrap;
-   gap: 20px;
-   width: 100%;
-   max-width: 1280px;
-   margin: 0 auto;
-   box-sizing: border-box;
-   margin-top: 20px;
-   justify-content: flex-start;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	width: 100%;
+	max-width: 1280px;
+	margin: 0 auto;
+	box-sizing: border-box;
+	margin-top: 20px;
+	justify-content: flex-start;
 }
 
 .shop-item {
-   width:600px;
-   box-sizing: border-box;
-   border: 1px solid brown;
-   border-radius: 5px;
-   display: flex;
-   flex-direction: column;
-} 
+	width:600px;
+	box-sizing: border-box;
+	border: 1px solid brown;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+}
 
 .shop-profile {
 	width: 280px;
