--- a/green-yummy/src/main/resources/static/public/css/dataSearchDetail2.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearchDetail2.css
@@ -1,32 +1,13 @@
 
-.userComment{
-	box-sizing: border-box;
-	padding: 10px;
-	text-align: left;
-	
-	border: 2px solid gray;
-}
-.userComment p{
-	margin: 0 0 10px 0;
-}
-.reviewUser{
-	text-align: left;
-}
-.reviewUser span:nth-of-type(1){
+
+.recommandDetail{
+	padding: 10px 0 10px 0;
 	font: normal bold 15pt 'sans-serif';
 }
-.reviewUser span:nth-of-type(2){
-	color: orange;
-	font: normal bold 13pt 'sans-serif';
-}
-.reviewUser span:nth-of-type(3){
-	font: normal normal 11pt 'sans-serif';
-}
-.modal-content img{
-	width: 200px;
-	height: 200px;
-	
-	border: 2px solid gray;
+.detailType{
+	padding: 5px;
+	color: gray;
+	font: normal bold 11pt 'sans-serif';
 }
 
 
@@ -41,7 +22,8 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
+    overflow: auto; 
+    /* Enable scroll if needed */
     background-color: rgba(0, 0, 0, 0.4); /* Black background with opacity */
 }
 .modal-content {
@@ -51,17 +33,64 @@
     border: 1px solid #888;
     width: 800px; /* Could be more or less, depending on screen size */
 }
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.close-btn, .close-btn img{
+	width: 40px;
+	height :40px;
+	float: right;
 }
+/* .close-btn { */
+/*     color: #aaa; */
+    
+/*     font-size: 28px; */
+/*     font-weight: bold; */
+/* } */
 .close-btn:hover,
 .close-btn:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* 리뷰 모달 내용 */
+.userComment{
+	box-sizing: border-box;
+	padding: 20px;
+	margin-top: 10px;
+	text-align: left;
+	
+	border-radius: 8px;
+	border: 2px solid gray;
+}
+.userComment p{
+	margin: 0 0 10px 0;
+}
+.reviewUser{
+	text-align: left;
+}
+.reviewUser span{
+	padding: 5px;
+}
+.reviewUser span:nth-of-type(1){
+	font: normal bold 15pt 'sans-serif';
+}
+.reviewUser span:nth-of-type(2){
+	color: orange;
+	font: normal bold 13pt 'sans-serif';
+}
+.reviewUser span:nth-of-type(3){
+	font: normal normal 11pt 'sans-serif';
+}
+.review-detail-img{
+	width: 200px;
+	height: 200px;
+	
+	border: 2px solid gray;
+}
+.userComment p{
+	font: normal bold 11pt 'sans-serif';
+}
+.userComment{
+	font-size: 13pt;
 }
 
 /* 북마크 모달 */
