--- a/green-yummy/src/main/resources/static/public/css/findIdPassword.css
+++ b/green-yummy/src/main/resources/static/public/css/findIdPassword.css
@@ -8,7 +8,7 @@
 	height: 300px;
 	padding: 40px;
 	
-	border: 1px solid pink;
+	border: 1px solid salmon;
 }
 .hidden{
 	display: none;
@@ -33,7 +33,6 @@ main{
     width: 1280px;
     padding: 20px;
     
-    border: 1px solid skyblue;
 }
 .findIdPassCon{
 	display: flex;
@@ -42,7 +41,8 @@ main{
 	width: 640px;
 	padding: 20px;
 	
-	border: 2px solid orange;
+	border: 2px solid gray;
+	border-radius: 8px;
 }
 .findIdPassCon > ul{
     display: flex;
@@ -64,7 +64,6 @@ main{
 	cursor: pointer;
 	background: #f2f2f2;
 	
-	border: 1px solid red;
 }
 
 input[type="text"]{
@@ -93,6 +92,8 @@ input[type="text"]{
 	border: none;
 	font-weight: bold;
 	color: white;
-	background: #000080;
+/* 	background: #000080; */
+	background: indigo;
+	border-radius: 5px;
 	cursor: pointer;
 }
