--- a/green-yummy/src/main/resources/static/user/css/shopApply.css
+++ b/green-yummy/src/main/resources/static/user/css/shopApply.css
@@ -46,10 +46,13 @@ th{
 
 
 
-.shopLocation{
-	width: 900px;
-}
-input[type="text"]:not(.shopLocation){
+/* .shopLocation{ */
+/* 	width: 900px; */
+/* } */
+/* input[type="text"]:not(.shopLocation){ */
+/* 	width: 900px; */
+/* } */
+input[type="text"], textarea{
 	width: 900px;
 }
 input[type="text"]{
@@ -58,6 +61,10 @@ input[type="text"]{
 	border: none;
 	outline: none;
 	background: #f2f2f2;
+}
+textarea{
+	box-sizing: border-box;
+	padding: 10px;
 }
 .hidden{
 	display: none;
@@ -73,9 +80,11 @@ input[type="reset"]{
 	margin: 10px;
 	cursor: pointer;
 	font: normal bold 13pt 'sans-serif';
+	color: white;
 	border-radius: 8px;
 	border: none;
-	background: salmon;
+/* 	background: salmon; */
+	background: indigo;
 }
 
 #shopReason{
