--- a/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
@@ -71,11 +71,12 @@ hr{
 	float: right;
 }
 .bookmarkIcon, .backBtn,
-.bookmarkIcon img, .backBtn img{
+.bookmarkIcon img, .backBtn img,
+.bookmarkIconOff{
 	width: 40px;
 	height: 40px;
 }
-.bookmarkIcon, .backBtn{
+.bookmarkIcon, .backBtn, .bookmarkIconOff{
 	
 	margin: 0 10px 0 10px;
 	cursor: pointer;
@@ -85,6 +86,12 @@ hr{
 	position: relative;
 	top: 40px;
 	left: -5px;
+}
+/* #bookmarkCheck{ */
+/* 	display: none; */
+/* } */
+.hidein{
+	display: none;
 }
 
 /* 썸네일 사진 */
