--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -44,6 +44,7 @@
 	left: 0;
 	right: 0;
 }
+
 .ocricon{
 	position: relative;
 	top: -3px;
@@ -58,15 +59,21 @@
 	height: 50px;
 	cursor: pointer;
 }
-.searchBar {
+.searchBar, .selectBox{
 	box-sizing: border-box;
+	padding: 10px 10px 10px 20px;
+	outline: none;
+	border: 2px solid salmon;
+	border-radius: 50px;
+}
+.selectBox{
+	cursor: pointer;
+}
+.searchBar {
     width: 800px;
     height: 50px;
+    margin-left: 10px;
     display: inline-block; 
-    outline: none;
-    border-radius: 50px;
-    border: 2px solid salmon;
-    padding: 10px 10px 10px 20px;
     background: white;
     
     /* border: 1px solid brown; */
@@ -96,7 +103,6 @@
 }
 
 /*카페고리 부분*/
-
 
 .search-list{
     display: flex;       
